Address review comments
This reverts commit 1f82ab33d96d9e6ed247f75892362b9faba387cb.